ref: separate up image to cloud into service (#12)
