# swagger.json
@@ -47,7 +47,7 @@
         },
         "responses": {
           "201": {
-            "description": "User registered successfully"
+            "description": "Created"
           },
           "400": {
             "description": "Bad Request"
@@ -77,7 +77,7 @@
         },
         "responses": {
           "200": {
-            "description": "Successful login"
+            "description": "Ok"
           },
           "400": {
             "description": "Bad Request"
@@ -125,7 +125,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Successful response"
+            "description": "Ok"
           },
           "401": {
             "description": "Unauthorized"
@@ -173,7 +173,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Successful response"
+            "description": "Ok"
           },
           "401": {
             "description": "Unauthorized"
@@ -206,7 +206,7 @@
         ],
         "responses": {
           "201": {
-            "description": "Movie inserted successfully"
+            "description": "Created"
           },
           "401": {
             "description": "Unauthorized"
@@ -254,8 +254,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "Successful response"
+          "201": {
+            "description": "Created"
           },
           "401": {
             "description": "Unauthorized"
@@ -264,7 +264,7 @@
             "description": "Forbidden"
           },
           "404": {
-            "description": "Movie not found"
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -306,8 +306,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "Successful response"
+          "201": {
+            "description": "Created"
           },
           "401": {
             "description": "Unauthorized"
@@ -316,7 +316,7 @@
             "description": "Forbidden"
           },
           "404": {
-            "description": "Movie not found"
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -359,7 +359,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Successful response"
+            "description": "Ok"
           },
           "401": {
             "description": "Unauthorized"
@@ -368,7 +368,7 @@
             "description": "Forbidden"
           },
           "404": {
-            "description": "Movie not found"
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -408,7 +408,7 @@
             "description": "Forbidden"
           },
           "404": {
-            "description": "Movie not found"
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
